@@ -33,7 +33,6 @@
 
 	/* Init CURRENT NODE ID */
 	init_nodes();
-
 	/* switch($page["type"]) */
 	switch($page['type']){
 		case PAGE_TYPE_IMAGE:
@@ -68,6 +67,11 @@
 			break;
 		case PAGE_TYPE_TEXT_FILE:
 			header('Content-Type: text/plain; charset=UTF-8');
+			header('Content-Disposition: attachment; filename="'.$page['file'].'"');
+			if(!defined('ZBX_PAGE_NO_MENU')) define('ZBX_PAGE_NO_MENU', 1);
+			break;
+		case PAGE_TYPE_CSV:
+			header('Content-Type: text/csv; charset=UTF-8');
 			header('Content-Disposition: attachment; filename="'.$page['file'].'"');
 			if(!defined('ZBX_PAGE_NO_MENU')) define('ZBX_PAGE_NO_MENU', 1);
 			break;
